--- a/public/css/public-style.scss
+++ b/public/css/public-style.scss
@@ -2,3 +2,170 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+$color_1: #b7b7b7;
+$color_2: #b9b9b9;
+$color_3: #000;
+$color_4: #fff;
+$color_5: #333;
+
+.countdown {
+  display: table-cell;
+  font-weight: normal;
+  .item {
+    display: inline-block;
+    vertical-align: bottom;
+    position: relative;
+
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 90px;
+    text-align: center;
+    color: $color_1;
+    border-radius: 10px;
+    // margin: 50px 10px 50px 0;
+    padding: 0 10px;
+    background: #2a2a2a;
+    background: -webkit-linear-gradient(#2a2a2a, #000);
+    background: linear-gradient(#2a2a2a, #000);
+    overflow: hidden;
+    & + .item {
+      margin-left: 10px;
+    }
+    &:after {
+      content: "";
+      display: block;
+      height: 1px;
+      border-top: 3px solid #111;
+      width: 100%;
+      position: absolute;
+      top: 50%;
+      left: 0;
+    }
+  }
+  .item-ss {
+    font-size: 50px;
+    line-height: 90px;
+  }
+  .label {
+    text-transform: uppercase;
+    display: block;
+    position: absolute;
+
+    font-weight: 700;
+    line-height: normal;
+    right: 6px;
+    bottom: 4px;
+    font-size: 14px;
+    color: $color_2;
+  }
+}
+.countdown-alt-1 {
+  display: block;
+  font-size: 0;
+  margin: 100px 0;
+  color: $color_3;
+  .item {
+    position: relative;
+  }
+  .dd,
+  .hh-1,
+  .hh-2,
+  .mm-1,
+  .mm-2,
+  .ss-1,
+  .ss-2 {
+    background: #f6f6f6;
+    border-radius: 10px;
+    display: inline-block;
+    font-size: 60px;
+    margin: 1px 2px;
+    padding: 5px;
+    text-align: center;
+    line-height: 1;
+  }
+  .label {
+    font-style: italic;
+    text-transform: capitalize;
+    background: #f6f6f6;
+    border-radius: 5px;
+    font-size: 12px;
+    margin: 1px 2px;
+    padding: 2px 5px;
+    position: absolute;
+    left: 0;
+    bottom: -44px;
+  }
+  .separator-dd {
+    color: $color_4;
+    font-size: 40px;
+    position: relative;
+  }
+  .separator {
+    color: $color_4;
+    font-size: 40px;
+    position: relative;
+  }
+}
+.countdown-alt-2 {
+  font-size: 0;
+  display: block;
+  overflow: auto;
+  padding: 20px 0;
+  margin: 50px 0;
+
+  color: $color_5;
+  -webkit-transform: skew(-2deg, -2deg);
+  transform: skew(-2deg, -2deg);
+  .item {
+    display: block;
+    float: left;
+    position: relative;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 36px 20px 10px 20px;
+    margin: 0 5px;
+    text-align: center;
+    background: #fff;
+    border: 2px solid #fff;
+    box-shadow: 10px 10px 10px 1px rgba(0, 0, 0, 0.2);
+  }
+  .dd {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .hh-1 {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .hh-2 {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .mm-1 {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .mm-2 {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .ss-1 {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .ss-2 {
+    font: italic;
+    text-shadow: 1px 1px 10px #fff, 1px 1px 3px #333;
+  }
+  .label {
+    font-weight: normal;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    font-size: 14px;
+    padding: 5px 10px;
+    background: #0b81bc;
+    color: $color_4;
+  }
+}
